--- a/test cases/common/112 has arg/meson.build
+++ b/test cases/common/112 has arg/meson.build
@@ -19,6 +19,9 @@ assert(not cc.has_argument(isnt_arg), 'Arg that should be broken is not.')
 assert(cpp.has_argument(is_arg), 'Arg that should have worked does not work.')
 assert(not cpp.has_argument(isnt_arg), 'Arg that should be broken is not.')
 
+assert(cc.get_supported_arguments([is_arg, isnt_arg, useless]) == [is_arg, useless], 'Arg filtering returned different result.')
+assert(cpp.get_supported_arguments([is_arg, isnt_arg, useless]) == [is_arg, useless], 'Arg filtering returned different result.')
+
 # Have useless at the end to ensure that the search goes from front to back.
 l1 = cc.first_supported_argument([isnt_arg, is_arg, isnt_arg, useless])
 l2 = cc.first_supported_argument(isnt_arg, isnt_arg, isnt_arg)
