i18n: Introduce i18n.files() metedata wrapper
Signed-off-by: Quentin Glidic <sardemff7+git@sardemff7.net>

--- a/test cases/frameworks/6 gettext/po/meson.build
+++ b/test cases/frameworks/6 gettext/po/meson.build
@@ -1,3 +1,4 @@
 langs = ['fi', 'de']
 
-i18n.gettext('intltest', languages : langs)
+i18n.gettext('intltest-old', languages : langs)
+i18n.create_pot('intltest', [src_files, data_files], languages : langs)
