--- a/test cases/frameworks/6 gettext/src/meson.build
+++ b/test cases/frameworks/6 gettext/src/meson.build
@@ -1,2 +1,4 @@
 executable('intlprog', 'intlmain.c', install : true,
   dependencies : meson.get_compiler('c').find_library('intl', required : false))
+
+src_files = i18n.files('intlmain.c', language: 'c', keywords: ['_'])
