Extend test to check subsystem set by executable(gui_app:)

--- a/test cases/windows/17 gui app/meson.build
+++ b/test cases/windows/17 gui app/meson.build
@@ -7,3 +7,16 @@ project('gui_app_test', 'c')
 
 console_lib = static_library('main', 'console_prog.c')
 executable('console', 'dummy.c', link_with: console_lib, gui_app: false)
+
+#
+# also verify that the correct subsystem is set by executable(gui_app:)
+#
+
+gui_prog = executable('gui_prog', 'gui_prog.c', gui_app: true)
+console_prog = executable('console_prog', 'console_prog.c', gui_app: false)
+
+tester = find_program('gui_app_tester.py')
+
+tool = find_program('objdump', 'dumpbin')
+test('is_gui', tester, args: [tool.path(), gui_prog, '2'])
+test('not_gui', tester, args: [tool.path(), console_prog, '3'])
