Add variables to test to prove linkage is correct.

--- a/test cases/common/160 duplicate source names/meson.build
+++ b/test cases/common/160 duplicate source names/meson.build
@@ -4,4 +4,4 @@ sources = []
 subdir('dir1')
 subdir('dir2')
 subdir('dir3')
-executable('a.out', sources : sources, objects : lib.extract_objects())
+executable('a.out', sources : sources, objects : lib.extract_all_objects())
