Add example of generated header in docs.

--- a/test cases/frameworks/10 gtk-doc/meson.build
+++ b/test cases/frameworks/10 gtk-doc/meson.build
@@ -1,10 +1,12 @@
-project('gtkdoctest', 'c')
+project('gtkdoctest', 'c', version : '1.0.0')
 
 gnome = import('gnome')
 
 assert(gnome.gtkdoc_html_dir('foobar') == 'share/gtkdoc/html/foobar', 'Gtkdoc install dir is incorrect.')
 
 inc = include_directories('include')
+
+subdir('include')
 
 # We have to disable this test until this bug fix has landed to
 # distros https://bugzilla.gnome.org/show_bug.cgi?id=753145
