Allow excluding files from `install_subdir`
The install_subdir command now accepts a new `exclude` keyword argument
that allows specified files to be excluded from the installed
subdirectory.

--- a/test cases/common/66 install subdir/meson.build
+++ b/test cases/common/66 install subdir/meson.build
@@ -1,5 +1,11 @@
 project('install a whole subdir', 'c')
 
+# A subdir with an exclusion:
+install_subdir('sub2',
+  exclude_files : ['excluded-three.dat'],
+  exclude_directories : ['excluded'],
+  install_dir : 'share')
+
 subdir('subdir')
 # A subdir with write perms only for the owner
 # and read-list perms for owner and group
