--- a/test cases/windows/12 exe implib/meson.build
+++ b/test cases/windows/12 exe implib/meson.build
@@ -1,7 +1,7 @@
 project('wintest', 'c')
 
-# Test that we can produce an implib for an executable on Windows, and that it
-# is installed along with the executable
+# Test that we can produce an implib for an executable on Windows, and that it's
+# name can be set, and that it is installed along with the executable
 
-prog = executable('prog', 'prog.c', install: true, implib: true)
-test('wintest', prog)
+executable('prog', 'prog.c', install: true, implib: true)
+executable('prog2', 'prog.c', install: true, implib: 'burble')
