get-unquoted: Add test case for new get_unquoted() method

--- a/test cases/common/16 configure file/meson.build
+++ b/test cases/common/16 configure file/meson.build
@@ -64,6 +64,10 @@ dump.set_quoted('SHOULD_BE_STRING', 'string', description : 'A string')
 dump.set_quoted('SHOULD_BE_STRING2', 'A "B" C')
 dump.set_quoted('SHOULD_BE_STRING3', 'A "" C')
 dump.set_quoted('SHOULD_BE_STRING4', 'A " C')
+dump.set('SHOULD_BE_UNQUOTED_STRING', dump.get_unquoted('SHOULD_BE_STRING'))
+dump.set('SHOULD_BE_UNQUOTED_STRING2', dump.get_unquoted('SHOULD_BE_STRING2'))
+dump.set('SHOULD_BE_UNQUOTED_STRING3', dump.get_unquoted('SHOULD_BE_STRING3'))
+dump.set('SHOULD_BE_UNQUOTED_STRING4', dump.get_unquoted('SHOULD_BE_STRING4'))
 dump.set('SHOULD_BE_RETURN', 'return')
 dump.set('SHOULD_BE_DEFINED', true)
 dump.set('SHOULD_BE_UNDEFINED', false)
