Allow for missing install_dir in install_data()
The documentation doesn't require it and the interpreter code works around the
possibility of it being None. The ninja backend code however fails with

File "/home/whot/code/meson/mesonbuild/backend/ninjabackend.py", line 796, in generate_data_install
    dstabs = os.path.join(subdir or None, plain_f)
File "/usr/lib64/python3.6/posixpath.py", line 78, in join
    a = os.fspath(a)
TypeError: expected str, bytes or os.PathLike object, not NoneType

If install_dir is missing, default to datadir/projectname

--- a/test cases/common/12 data/meson.build
+++ b/test cases/common/12 data/meson.build
@@ -10,6 +10,8 @@ install_data(files('fileobject_datafile.dat'),
   install_dir : 'share/progname',
   install_mode : [false, false, 0])
 
+install_data(files('somefile.txt'))
+
 subdir('vanishing')
 
 install_data(sources : 'vanishing/vanishing2.dat', install_dir : 'share/progname')
