Make base options accessible via get_option()

--- a/test cases/common/47 options/meson.build
+++ b/test cases/common/47 options/meson.build
@@ -12,6 +12,10 @@ if get_option('combo_opt') != 'combo'
   error('Incorrect value to combo option.')
 endif
 
+if get_option('b_lto') != false
+  error('Incorrect value in base option.')
+endif
+
 if get_option('includedir') != 'include'
   error('Incorrect value in builtin option.')
 endif
