Really basic GHDL hello world. Can elaborate a single file simulation from Meson.
Signed-off-by: Alexis Jeandet <alexis.jeandet@member.fsf.org>

--- a/test cases/fpga/1 basic/meson.build
+++ b/test cases/fpga/1 basic/meson.build
@@ -11,7 +11,8 @@ bitsream = fpga.bitstream('simple-adder', 'adder.vhd',
      pr_options:'some options'
 )
 
-message(bitsream)
+fpga.simulation('adder','adder.vhd',simulator:'GHDL')
+
 
 #test('Simple Test','testbench.vhd', src ,simulator:'GHDL',args:'--vcd=output.vcd')
 
