vala: Extend the GIR test to include 'install_dir' and '--shared-library'
The current example will fail at runtime because the typelib will not be
able to retrieve the shared library.

Cover as well installation and update the documentation.

--- a/test cases/vala/9 gir/meson.build
+++ b/test cases/vala/9 gir/meson.build
@@ -11,8 +11,9 @@ foo = shared_library('foo', 'foo.vala',
                      dependencies: [glib, gobject])
 
 custom_target('foo-typelib',
-              command: [g_ir_compiler, '--output', '@OUTPUT@', '@INPUT@'],
-              input: meson.current_build_dir() + '/Foo-1.0.gir',
+              command: [g_ir_compiler, '--shared-library', foo.full_path(), '--output', '@OUTPUT@', join_paths(meson.current_build_dir(), '/Foo-1.0.gir')],
               output: 'Foo-1.0.typelib',
-              depends: foo)
+              depends: foo,
+              install: true,
+              install_dir: join_paths(get_option('libdir'), 'girepository-1.0'))
 
