--- a/test cases/linuxlike/9 compiler checks with dependencies/meson.build
+++ b/test cases/linuxlike/9 compiler checks with dependencies/meson.build
@@ -29,3 +29,10 @@ int main(int argc, char *argv[]) {
   assert (cc.has_function('deflate', prefix : '#include<zlib.h>', dependencies : zlib, name : 'Test for function in zlib'), 'has_function test failed.')
   assert (cc.links(linkcode, dependencies : zlib, name : 'Test link against zlib'), 'Linking test failed against zlib.')
 endif
+
+assert(cc.has_function('pthread_create',
+    dependencies : dependency('threads'),
+    prefix : '#include <pthread.h>'),
+  'Could not detect pthread_create with a thread dependency.')
+
+
