Fix wrong dep name in vulkan test

--- a/test cases/frameworks/17 vulkan/meson.build
+++ b/test cases/frameworks/17 vulkan/meson.build
@@ -1,6 +1,6 @@
 project('vulkan test', 'c')
 
-sdl2_dep = dependency('vulkan')
+vulkan_dep = dependency('vulkan')
 
 e = executable('vulkanprog', 'vulkanprog.c', dependencies : sdl2_dep)
 
