Fix vulkan test

--- a/test cases/frameworks/17 vulkan/meson.build
+++ b/test cases/frameworks/17 vulkan/meson.build
@@ -2,6 +2,6 @@ project('vulkan test', 'c')
 
 vulkan_dep = dependency('vulkan')
 
-e = executable('vulkanprog', 'vulkanprog.c', dependencies : sdl2_dep)
+e = executable('vulkanprog', 'vulkanprog.c', dependencies : vulkan_dep)
 
 test('vulkantest', e)
