Add support for MS-MPI.

--- a/test cases/common/157 mpi/meson.build
+++ b/test cases/common/157 mpi/meson.build
@@ -1,5 +1,11 @@
 project('mpi', 'c', 'cpp')
 
+cc = meson.get_compiler('c')
+
+if build_machine.system() == 'windows' and cc.get_id() != 'msvc'
+  error('MESON_SKIP_TEST: MPI not available on Windows without MSVC.')
+endif
+
 mpic = dependency('mpi', language : 'c')
 exec = executable('exec',
   'main.c',
@@ -7,12 +13,15 @@ exec = executable('exec',
 
 test('MPI C', exec)
 
-mpicpp = dependency('mpi', language : 'cpp')
-execpp = executable('execpp',
-  'main.cpp',
-  dependencies : [mpicpp])
+if build_machine.system() != 'windows'
+  # C++ MPI not supported by MS-MPI used on AppVeyor.
+  mpicpp = dependency('mpi', language : 'cpp')
+  execpp = executable('execpp',
+    'main.cpp',
+    dependencies : [mpicpp])
 
-test('MPI C++', execpp)
+  test('MPI C++', execpp)
+endif
 
 if add_languages('fortran', required : false)
   mpifort = dependency('mpi', language : 'fortran')
