--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -76,6 +76,17 @@ install:
   - ps: If($Env:compiler -eq 'msys2-mingw') {(new-object Net.WebClient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', 'C:\projects\meson\get-pip.py')}
   - cmd: if %compiler%==msys2-mingw ( %PYTHON% "C:\projects\meson\get-pip.py" )
   - cmd: if %compiler%==cygwin ( call ci\appveyor-install.bat )
+  - ps: |
+        If($Env:compiler -like 'msvc*') {
+          (new-object net.webclient).DownloadFile(
+            "https://download.microsoft.com/download/D/B/B/DBB64BA1-7B51-43DB-8BF1-D1FB45EACF7A/msmpisdk.msi",
+            "C:\projects\msmpisdk.msi")
+          c:\windows\system32\msiexec.exe /i C:\projects\msmpisdk.msi /quiet
+          (new-object net.webclient).DownloadFile(
+            "https://download.microsoft.com/download/D/B/B/DBB64BA1-7B51-43DB-8BF1-D1FB45EACF7A/MSMpiSetup.exe",
+            "C:\projects\MSMpiSetup.exe")
+          c:\projects\MSMpiSetup.exe -unattend -full
+        }
 
   # Install additional packages needed for all builds.
   - cmd: "%WRAPPER% %PYTHON% -m pip install codecov"
