Added pcap dep to CI image.

--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -9,5 +9,5 @@ RUN apt-get -y update && apt-get -y upgrade \
 && apt-get -y install llvm libsdl2-dev \
 && apt-get -y install python3-pip libxml2-dev libxslt1-dev cmake libyaml-dev \
 && apt-get -y install openmpi-bin libopenmpi-dev \
-&& apt-get -y install libvulkan-dev \
+&& apt-get -y install libvulkan-dev libpcap-dev \
 && python3 -m pip install hotdoc codecov
