components: Propagate disabling targets link_with disabled targets

--- a/test cases/common/159 components/meson.build
+++ b/test cases/common/159 components/meson.build
@@ -1,11 +1,14 @@
 project('component', 'c')
 
+libcomp = component('lib')
+lib = library('simplelib', 'simplelib.c', components: libcomp)
+
 tcomponent_default_option = component('hello1')
 component_disable_by_default = component('hello3', default: 'disabled')
 
-hello1 = executable('hello1', sources: 'hello.c',
-  components: tcomponent_default_option)
-
+hello1 = executable('hello_with_lib', sources: 'hello.c',
+  components: tcomponent_default_option,
+  link_with: lib)
 hello2 = executable('hello2', sources: 'hello.c',
   components: component('hello2'))
 hello3 = executable('hello3', sources: 'hello.c',
