gnome: Allow passing build_by_default: to some functions
Closes https://github.com/mesonbuild/meson/issues/2174

--- a/test cases/frameworks/7 gnome/resources/meson.build
+++ b/test cases/frameworks/7 gnome/resources/meson.build
@@ -45,3 +45,11 @@ if glib.version() >= '2.52.0'
     dependencies: gio)
   test('generated resource test', generated_res_exe)
 endif
+
+# Test build_by_default
+gnome.compile_resources('build-resources',
+  'simple.gresource.xml',
+  gresource_bundle : true,
+  build_by_default : true,
+  source_dir : '../resources-data',
+)
