--- a/test cases/frameworks/7 gnome/gir/meson.build
+++ b/test cases/frameworks/7 gnome/gir/meson.build
@@ -28,7 +28,8 @@ gnome.generate_gir(
   includes : ['GObject-2.0', 'MesonDep1-1.0'],
   # dep1_dep pulls in dep2_dep for us
   dependencies : [fake_dep, dep1_dep],
-  install : true
+  install : true,
+  build_by_default : true,
 )
 
 test('gobject introspection/c', girexe)
