tests/common/159: Disable b_coverage=true
Setting it seems to cause it to be set on all later tests, which causes
a lot of failures:

https://travis-ci.org/mesonbuild/meson/jobs/264468097
https://travis-ci.org/mesonbuild/meson/jobs/264468093

--- a/test cases/common/159 reserved targets/meson.build
+++ b/test cases/common/159 reserved targets/meson.build
@@ -1,5 +1,6 @@
-project('reserved target names', 'c',
-        default_options : ['b_coverage=true'])
+project('reserved target names', 'c')
+        # FIXME: Setting this causes it to leak to all other tests
+        #default_options : ['b_coverage=true']
 
 subdir('all')
 subdir('benchmark')
