tests/common/159: Disable phony test
Breaks on case-insensitive HFS+ on Travis
https://travis-ci.org/mesonbuild/meson/jobs/264468097

And on Appveyor:
https://ci.appveyor.com/project/jpakkane/meson/build/3344/job/k996o8g57qf68ryb

--- a/test cases/common/159 reserved targets/meson.build
+++ b/test cases/common/159 reserved targets/meson.build
@@ -15,7 +15,10 @@ subdir('coverage-xml')
 subdir('dist')
 subdir('distcheck')
 subdir('install')
-subdir('phony')
+# We end up creating duplicate lowercase target names for this on
+# case-insensitive HFS+, so disable it
+# https://travis-ci.org/mesonbuild/meson/jobs/264468097
+#subdir('phony')
 subdir('PHONY')
 subdir('reconfigure')
 subdir('scan-build')
