Support LINGUAS for gnome.yelp() languages
Listing all languages inside meson.build for the Yelp-based manual
localisation is error-prone, and it also requires parsing and modifying
Meson files from external tools.

Just like we do for i18n, we can use an ancillary `LINGUAS` file in the
help source sub-directory to list all the help languages.

--- a/test cases/frameworks/13 yelp/help/meson.build
+++ b/test cases/frameworks/13 yelp/help/meson.build
@@ -13,3 +13,9 @@ gnome.yelp('meson-symlink',
    symlink_media: true,
    languages: ['de', 'es'],
 )
+
+gnome.yelp('meson-linguas',
+   sources: 'index.page',
+   media: 'media/test.txt',
+   symlink_media: false,
+)
