Find Boost dep when there is an extra lib to link
There are several components in Boost which must be linked with extra
libraries. Boost Log is one of them and in special circumstances needs
linking with boost_log_setup.

http://www.boost.org/doc/libs/1_64_0/libs/log/doc/html/log/detailed/utilities.html#log.detailed.utilities.setup

This fix covers the case when there is no source file corresponding to
the additional library.

--- a/test cases/frameworks/1 boost/meson.build
+++ b/test cases/frameworks/1 boost/meson.build
@@ -1,6 +1,10 @@
 project('boosttest', 'cpp',
   default_options : ['cpp_std=c++11'])
 
+add_project_arguments(['-DBOOST_LOG_DYN_LINK'],
+  language : 'cpp'
+)
+
 # We want to have multiple separate configurations of Boost
 # within one project. The need to be independent of each other.
 # Use one without a library dependency and one with it.
@@ -10,15 +14,18 @@ linkdep = dependency('boost', modules : ['thread', 'system'])
 staticdep = dependency('boost', modules : ['thread', 'system'], static : true)
 testdep = dependency('boost', modules : 'test')
 nomoddep = dependency('boost')
+extralibdep = dependency('boost', modules : ['thread', 'system', 'log_setup', 'log'])
 
 nolinkexe = executable('nolinkedexe', 'nolinkexe.cc', dependencies : nolinkdep)
 linkexe = executable('linkedexe', 'linkexe.cc', dependencies : linkdep)
 staticexe = executable('staticlinkedexe', 'linkexe.cc', dependencies : staticdep)
 unitexe = executable('utf', 'unit_test.cpp', dependencies: testdep)
 nomodexe = executable('nomod', 'nomod.cpp', dependencies : nomoddep)
+extralibexe = executable('extralibexe', 'extralib.cpp', dependencies : extralibdep)
 
 test('Boost nolinktest', nolinkexe)
 test('Boost linktest', linkexe)
 test('Boost statictest', staticexe)
 test('Boost UTF test', unitexe)
 test('Boost nomod', nomodexe)
+test('Boost extralib test', extralibexe)
