Remove PHONY because Windows and OSX file systems are crap. Closes #2199.

--- a/test cases/common/159 reserved targets/meson.build
+++ b/test cases/common/159 reserved targets/meson.build
@@ -15,11 +15,10 @@ subdir('coverage-xml')
 subdir('dist')
 subdir('distcheck')
 subdir('install')
-# We end up creating duplicate lowercase target names for this on
-# case-insensitive HFS+, so disable it
-# https://travis-ci.org/mesonbuild/meson/jobs/264468097
-#subdir('phony')
-subdir('PHONY')
+# We don't have a 'PHONY' directory because Windows and OSX
+# choke horribly when there are two entries with the same
+# name but different case.
+subdir('phony')
 subdir('reconfigure')
 subdir('scan-build')
 subdir('test')
