--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get -y update && apt-get -y upgrade \
 && apt-get -y install python3-pip libxml2-dev libxslt1-dev cmake libyaml-dev \
 && apt-get -y install openmpi-bin libopenmpi-dev \
 && apt-get -y install libboost-log-dev \
-&& apt-get -y install libvulkan-dev libpcap-dev \
+&& apt-get -y install libvulkan-dev libpcap-dev libcups2-dev \
 && apt-get -y install gcovr lcov \
 && apt-get -y install gtk-sharp2 gtk-sharp2-gapi libglib2.0-cil-dev \
 && python3 -m pip install hotdoc codecov
