d: Newer GDC versions can compile shared libraries
Actually, GDC supports shared libraries since version 6.2, but on Debian
there are still issues with that version due to the standard library not
being compiled with PIC.
Therefore, we make a very conservative assumption here and only enable
the tests for GDC >= 7.0

--- a/test cases/d/7 multilib/meson.build
+++ b/test cases/d/7 multilib/meson.build
@@ -1,7 +1,10 @@
 project('D Multiple Versioned Shared Libraries', 'd')
 
-if meson.get_compiler('d').get_id() == 'gcc'
-  error('MESON_SKIP_TEST: GDC can not build shared libraries (2016)')
+dc = meson.get_compiler('d')
+if dc.get_id() == 'gcc'
+  if dc.version().version_compare('< 7')
+    error('MESON_SKIP_TEST: GDC < 7.0 can not build shared libraries')
+  endif
 endif
 
 ldyn1 = shared_library('say1',
