--- a/test cases/frameworks/7 gnome/gdbus/meson.build
+++ b/test cases/frameworks/7 gnome/gdbus/meson.build
@@ -1,6 +1,10 @@
 gdbus_src = gnome.gdbus_codegen('generated-gdbus', 'com.example.Sample.xml',
   interface_prefix : 'com.example.',
-  namespace : 'Sample')
+  namespace : 'Sample',
+  annotations : [
+    ['com.example.Hello()', 'org.freedesktop.DBus.Deprecated', 'true']
+  ]
+)
 
 gdbus_exe = executable('gdbus-test', 'gdbusprog.c',
   gdbus_src,
