Add a test for the custom target incdirs change
https://github.com/mesonbuild/meson/pull/2291

--- a/test cases/common/138 include order/meson.build
+++ b/test cases/common/138 include order/meson.build
@@ -10,6 +10,8 @@ project('include order', 'c')
 # 5. Include paths added via `include_directories:` of internal deps
 #    Within this, the build dir takes precedence over the source dir
 
+# Custom target dir with a built header
+subdir('ctsub')
 # Defines an internal dep
 subdir('sub1')
 # Defines a per-target include path
