gnome: Docbook generation for gdbus_codegen()
Add new 'docbook' argument which generates Docbook documentation for
each D-Bus interface. The docbook argument will be used as prefix
in `PREFIX`-NAME.xml pattern, and NAME will be replaced by the D-Bus
interfaces.

--- a/test cases/frameworks/7 gnome/gdbus/meson.build
+++ b/test cases/frameworks/7 gnome/gdbus/meson.build
@@ -3,7 +3,8 @@ gdbus_src = gnome.gdbus_codegen('generated-gdbus', 'com.example.Sample.xml',
   namespace : 'Sample',
   annotations : [
     ['com.example.Hello()', 'org.freedesktop.DBus.Deprecated', 'true']
-  ]
+  ],
+  docbook : 'generated-gdbus-doc'
 )
 
 gdbus_exe = executable('gdbus-test', 'gdbusprog.c',
