--- a/test cases/common/98 gen extra/meson.build
+++ b/test cases/common/98 gen extra/meson.build
@@ -11,3 +11,22 @@ g2 = gen.process('name.dat', extra_args: '--upper')
 
 test('basic', executable('basic', 'plain.c', g1))
 test('upper', executable('upper', 'upper.c', g2))
+
+cp = find_program('cp')
+basename_gen = generator(cp,
+  output : '@BASENAME@.c',
+  arguments : ['@INPUT@', join_paths('@BUILD_DIR@', '@BASENAME@.c')])
+
+# This test should produce a name.c
+basename_src = basename_gen.process('name.l')
+
+test('basename', executable('basename', basename_src))
+
+plainname_gen = generator(cp,
+  output : '@PLAINNAME@.c',
+  arguments : ['@INPUT@', join_paths('@BUILD_DIR@', '@PLAINNAME@.c')])
+
+# This test should produce a name.l.c
+plainname_src = plainname_gen.process('name.l')
+
+test('plainname', executable('plainname', plainname_src))
