--- a/test cases/common/98 gen extra/meson.build
+++ b/test cases/common/98 gen extra/meson.build
@@ -12,21 +12,19 @@ g2 = gen.process('name.dat', extra_args: '--upper')
 test('basic', executable('basic', 'plain.c', g1))
 test('upper', executable('upper', 'upper.c', g2))
 
-cp = find_program('cp')
-basename_gen = generator(cp,
-  output : '@BASENAME@.c',
-  arguments : ['@INPUT@', join_paths('@BUILD_DIR@', '@BASENAME@.c')])
+prog2 = find_program('srcgen2.py')
+basename_gen = generator(prog2,
+  output : ['@BASENAME@.tab.c', '@BASENAME@.tab.h'],
+  arguments : ['@BUILD_DIR@', '@BASENAME@', '@INPUT@'])
 
-# This test should produce a name.c
 basename_src = basename_gen.process('name.l')
 
 test('basename', executable('basename', basename_src))
 
-plainname_gen = generator(cp,
-  output : '@PLAINNAME@.c',
-  arguments : ['@INPUT@', join_paths('@BUILD_DIR@', '@PLAINNAME@.c')])
+plainname_gen = generator(prog2,
+  output : ['@PLAINNAME@.tab.c', '@PLAINNAME@.tab.h'],
+  arguments : ['@BUILD_DIR@', '@PLAINNAME@', '@INPUT@'])
 
-# This test should produce a name.l.c
 plainname_src = plainname_gen.process('name.l')
 
 test('plainname', executable('plainname', plainname_src))
