Use flake8-isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,9 @@ ignore =
     # E731: do not assign a lambda expression, use a def (too many false positives)
     E731
 max-line-length = 120
+
+[isort]
+not_skip = __init__.py
+# 3 = Vertical Hanging Indent
+multi_line_output = 3
+include_trailing_comma = True
