tests/7 gnome: Test that GIR deps are flattened

--- a/test cases/frameworks/7 gnome/gir/meson.build
+++ b/test cases/frameworks/7 gnome/gir/meson.build
@@ -27,7 +27,7 @@ gnome.generate_gir(
   identifier_prefix : 'Meson',
   includes : ['GObject-2.0', 'MesonDep1-1.0'],
   # dep1_dep pulls in dep2_dep for us
-  dependencies : [fake_dep, dep1_dep],
+  dependencies : [[fake_dep, dep1_dep]],
   install : true,
   build_by_default : true,
   # Test that unknown kwargs do not crash the parser.
