deps: demote LLVM config to instance variable
Which fixes trying to use multiple versions of LLVM, and allows
simplifying the class somewhat.

--- a/test cases/frameworks/15 llvm/meson.build
+++ b/test cases/frameworks/15 llvm/meson.build
@@ -10,8 +10,7 @@ llvm_dep = dependency(
 d = dependency('llvm', modules : 'not-found', required : false)
 assert(d.found() == false, 'not-found llvm module found')
 
-# XXX: Version checks are broken, see FIXME in LLVMDependency
-#d = dependency('llvm', version : '<0.1', required : false)
-#assert(d.found() == false, 'ancient llvm module found')
+d = dependency('llvm', version : '<0.1', required : false)
+assert(d.found() == false, 'ancient llvm module found')
 
 executable('sum', 'sum.c',  dependencies : llvm_dep)
