Added libwmf to the CI image.

--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -11,4 +11,5 @@ RUN apt-get -y update && apt-get -y upgrade \
 && apt-get -y install gcovr lcov \
 && apt-get -y install fpga-icestorm arachne-pnr yosys \
 && apt-get -y install gtk-sharp2 gtk-sharp2-gapi libglib2.0-cil-dev \
+&& apt-get -y install libwmf-dev \
 && python3 -m pip install hotdoc codecov
