dependencies: Use shlex to parse pkg-config cflags and libs
Escaping spaces with '\ ' is the only way that works with both
pkg-config and pkgconf, so quote that way and unquote inside Meson.
This should work on all platforms.

Also fix the unit test to do the same.

https://github.com/pkgconf/pkgconf/issues/153

--- a/test cases/unit/17 pkgconfig static/meson.build
+++ b/test cases/unit/17 pkgconfig static/meson.build
@@ -8,6 +8,10 @@ else
   prefix = '/'.join(prefix_parts)
 endif
 
+# Escape spaces
+prefix_parts = prefix.split(' ')
+prefix = '\ '.join(prefix_parts)
+
 conf = configuration_data()
 conf.set('PREFIX', prefix)
 configure_file(input : 'foo.pc.in',
