Replace failing test case "output subdir" with "output escaping" as outputting to subdir is now allowed with this patch.
Test "output escaping" make sure people cannot make their output escape by adding '..' in output path name.

--- a/test cases/failing/27 output escaping/meson.build
+++ b/test cases/failing/27 output escaping/meson.build
@@ -1,5 +1,5 @@
 project('outdir path', 'c')
 
 configure_file(input : 'foo.in',
-  output : 'subdir/foo',
+  output : '../subdir/foo',
   configuration : configuration_data())
