--- a/test cases/linuxlike/1 pkg-config/meson.build
+++ b/test cases/linuxlike/1 pkg-config/meson.build
@@ -23,7 +23,7 @@ dep2 = declare_dependency(dependencies : dep)
 exe2 = executable('zlibprog2', 'prog.c', dependencies : dep2)
 test('zlibtest2', exe2)
 
-# Try to find a nonexistant library to ensure requires:false works.
+# Try to find a nonexistent library to ensure requires:false works.
 
 dep = dependency('nvakuhrabnsdfasdf', required : false)
 
