--- a/test cases/common/66 install subdir/subdir/meson.build
+++ b/test cases/common/66 install subdir/subdir/meson.build
@@ -1,3 +1,3 @@
 install_subdir('sub1', install_dir : 'share',
-  # This mode will be overriden by the mode set in the outer install_subdir
+  # This mode will be overridden by the mode set in the outer install_subdir
   install_mode : 'rwxr-x---')
