pkgconfig: Allow passing Dependency objects to library(_private)
Special case ThreadDependency by taking compiler's flags and
PkgConfigDependency by adding them in requires(.private) instead. For
other Dependency objects just take their link_args and compile_args.

Closes #2725

--- a/test cases/common/51 pkgconfig-gen/meson.build
+++ b/test cases/common/51 pkgconfig-gen/meson.build
@@ -12,6 +12,11 @@ if v.version_compare('<0.29')
   error('MESON_SKIP_TEST: pkg-config version \'' + v + '\' too old')
 endif
 
+envcmd = find_program('env', required: false)
+if not envcmd.found()
+  error('MESON_SKIP_TEST: env command not found')
+endif
+
 pkgg = import('pkgconfig')
 
 lib = shared_library('simple', 'simple.c')
@@ -48,3 +53,60 @@ pkgg.generate(
   description : 'A foo library.',
   variables : ['foo=bar', 'datadir=${prefix}/data']
 )
+
+# libmain internally use libinternal and expose libexpose in its API
+exposed_lib = shared_library('libexposed', 'simple.c')
+internal_lib = shared_library('libinternal', 'simple.c')
+main_lib = shared_library('libmain', link_with : [exposed_lib, internal_lib])
+
+# Declare a few different Dependency objects
+pc_dep = dependency('libfoo', required : false)
+threads_dep = dependency('threads', required : false)
+custom_dep = declare_dependency(link_args : ['-lcustom'], compile_args : ['-DCUSTOM'])
+custom2_dep = declare_dependency(link_args : ['-lcustom2'], compile_args : ['-DCUSTOM2'])
+
+# Generate a PC file:
+# - Having libmain in libraries should pull implicitely libexposed and libinternal in Libs.private
+# - Having libexposed in libraries should remove it from Libs.private
+# - Having threads_dep in libraries should add '-pthread' in both Libs and Cflags
+# - Having custom_dep in libraries and libraries_private should only add it in Libs
+# - Having custom2_dep in libraries_private should not add its Cflags
+# - Having pc_dep in libraries_private should add it in Requires.private
+pkgg.generate(libraries : [main_lib, exposed_lib, threads_dep , custom_dep],
+  libraries_private : [custom_dep, custom2_dep, pc_dep],
+  version : libver,
+  name : 'dependency-test',
+  filebase : 'dependency-test',
+  description : 'A dependency test.'
+)
+
+msg = 'Generated pc file doesn\'t have expected @0@: @1@'
+
+out = run_command(envcmd, '-', pkgconfig_env, pkgconfig, 'dependency-test', '--print-requires').stdout().strip().split()
+assert(out.length() == 0, msg.format('requires', out))
+
+out = run_command(envcmd, '-', pkgconfig_env, pkgconfig, 'dependency-test', '--print-requires-private').stdout().strip().split()
+assert(out.contains('libfoo'), msg.format('requires.private', out))
+assert(out.length() == 1, msg.format('requires.private', out))
+
+out = run_command(envcmd, '-', pkgconfig_env, pkgconfig, 'dependency-test', '--cflags-only-other').stdout().strip().split()
+assert(out.contains('-pthread'), msg.format('cflags', out))
+assert(out.contains('-DCUSTOM'), msg.format('cflags', out))
+assert(out.length() == 2, msg.format('cflags', out))
+
+out = run_command(envcmd, '-', pkgconfig_env, pkgconfig, 'dependency-test', '--libs-only-l', '--libs-only-other').stdout().strip().split()
+assert(out.contains('-llibexposed'), msg.format('libs', out))
+assert(out.contains('-pthread'), msg.format('libs', out))
+assert(out.contains('-lcustom'), msg.format('libs', out))
+assert(out.contains('-llibmain'), msg.format('libs', out))
+assert(out.length() == 4, msg.format('libs', out))
+
+out = run_command(envcmd, '-', pkgconfig_env, pkgconfig, 'dependency-test', '--libs-only-l', '--libs-only-other', '--static').stdout().strip().split()
+assert(out.contains('-llibexposed'), msg.format('libs.private', out))
+assert(out.contains('-pthread'), msg.format('libs.private', out))
+assert(out.contains('-lcustom'), msg.format('libs.private', out))
+assert(out.contains('-llibmain'), msg.format('libs.private', out))
+assert(out.contains('-llibinternal'), msg.format('libs.private', out))
+assert(out.contains('-lcustom2'), msg.format('libs.private', out))
+assert(out.contains('-lfoo'), msg.format('libs.private', out))
+assert(out.length() == 7, msg.format('libs.private', out))
